--- a/front/primeFactor.html
+++ b/front/primeFactor.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title of your page</title>
+    <title>Calculadora de factor primo</title>
     <link rel="stylesheet" href="primeFactor.css">
 </head>
 <body>
@@ -15,6 +15,11 @@
         <input type="number" id="number" name="number" required>
         <button type="submit">Calcular</button>
     </form>
+
+    <div id="result">
+        <label>Resultado:</label>
+        <p>Resultado</p>
+    </div>
 
     <table border="1">
         <tr>
