Refactor: Update primeFactor.html and calculatePrimeFactors.js

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
         <button id="triggerButton">Calcular</button>
     </div>
     
-    <div id="result">
+    <!-- <div id="result">
         <label>Resultado:</label>
         <p>Resultado</p>
-    </div>
+    </div> -->
 
     <table>
         <tr>
